# VibeCoding

./: .gitignore  CHANGELOG.md  CONTEXTO.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  USER_GUIDE.md
docs/html/: factorial_calculator.html  index.html  search.js
factorial_calculator/: __init__.py  cli.py  core.py  exceptions.py  validator.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_exceptions.py  test_integration.py  test_validator.py
